fix bug with not showing password in summary; doubled id; put correct password inpout to logging

--- a/css/components/_input.scss
+++ b/css/components/_input.scss
@@ -7,6 +7,7 @@
     color: $granat;
   }
   input {
+    padding: 0.1rem 0.5rem;
     border: 0.2rem solid $gray;
   }
 }
