--- a/css/components/_password_input.scss
+++ b/css/components/_password_input.scss
@@ -11,6 +11,7 @@
 
     input {
       border: 0.2rem solid $gray;
+      padding: 0.1rem 0.5rem;
       padding-right: 6rem;
       width: 100%;
     }
